# TacticalCorrelator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start.ps1  start.sh
docker/: Dockerfile
docs/: USAGE.md
tactical_correlator/: cli.py
tactical_correlator/api/: __init__.py  main.py
tactical_correlator/config/: __init__.py  logging_config.py  settings.py
tactical_correlator/core/: __init__.py  correlator.py
tactical_correlator/parsers/: __init__.py  base_parser.py
tactical_correlator/parsers/network/: __init__.py
tactical_correlator/parsers/windows/: __init__.py  evtx_parser.py
tactical_correlator/utils/: data_utils.py  export_utils.py
